[~FEATURE] Updated Italian localization

--- a/src/app/locale/it_IT/FireGento_MageSetup.csv
+++ b/src/app/locale/it_IT/FireGento_MageSetup.csv
@@ -1,151 +1,150 @@
-"Display Block below Price","Mostra blocco sotto al prezzo"
-"Display tax info and shipping cost link below the price on all pages","Mostra info su tasse e spese di spedizione sotto al prezzo su tutte le pagine"
-"Display Delivery time on Category Pages","Mostra tempi di consegna nelle categorie"
-"CMS Page for Shipping Info","Pagina CMS per costi di spedizione"
-"Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost""","Mostra ""spese di spedizione incl."" al posto di ""spese di spedizione escl."""
+"Display Block below Price","Visualizza il blocco sotto al prezzo"
+"Display tax info and shipping cost link below the price on all pages","Visualizza il link alle informazioni sulle tasse e ai costi di spedizione sotto al prezzo su tutte le pagine"
+"Display Delivery time on Category Pages","Mostra i tempi di consegna nelle categorie"
+"CMS Page for Shipping Info","Pagina CMS per le informazioni delle spedizioni"
+"Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost""","Mostra ""incl. costi di spedizione"" invece di ""escl. costi di spedizione"""
+"Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost""","Mostra ""incl. costi di spedizione"" invece di ""escl. costi di spedizione"""
 "No Page","Nessuna pagina"
 "No Block","Nessun blocco"
-"Incl. Tax","IVA incl."
-"Incl. %s Tax","incl. IVA %s"
-"Excl. %s Tax","escl. IVA %s"
-"excl. <a href=""%s"">Shipping Cost</a>","<a href=""%s"">Spese di spedizione</a> escl."
-"incl. <a href=""%s"">Shipping Cost</a>","<a href=""%s"">Spese di spedizione</a> incl."
-"Display Product Weight below Price","Mostra peso sotto al prezzo"
-"Unit for Product Weight","Unità di misura per il peso"
+"Incl. Tax","Tasse incluse"
+"Incl. %s Tax","Incl. %s tasse"
+"Excl. %s Tax","Escl. %s tasse"
+"excl. <a href=""%s"">Shipping Cost</a>","escl. <a href=""%s"">costi di spedizione</a>"
+"incl. <a href=""%s"">Shipping Cost</a>","incl. <a href=""%s"">costi di spedizione</a>"
+"Display Product Weight below Price","Mostra il peso del prodotto sotto al prezzo"
+"Unit for Product Weight","Unità di misura del peso del prodotto"
 "e.g. g, kg, lb, ...","ad es. g, kg, lb, ..."
 "Shipping Weight %s","Peso spedizione %s"
 
-"If you want to add additional StoreViews (i.e. for multiple languages), please do so before submitting this form.","Se necessario, aggiungere ulteriori vetrine dello shop (ad es. per diverse lingue) prima di utilizzare questo form"
-"Skip installation","Skip installation"
-"MageSetup has been installed.","MageSetup installato correttamente"
-"Click <a href=""%s"">here</a> to set up your pages, blocks, emails and tax settings.","Clicca <a href=""%s"">qui</a> per impostare pagine CMS, blocchi, e-mail e configurazione delle tasse."
-"Please choose the requested setups:","Seleziona i setup da eseguire:"
-"Run MageSetup","Esegui MageSetup"
-"Update System Config Settings","Aggiorna configurazione di sistema"
-"i.e. newsletter confirmation, account confirmation, ..","ad es. conferma iscrizione alla newsletter, nuova registrazione, etc."
-"Create CMS Pages and Blocks","Crea pagine e blocchi CMS"
-"i.e. shipping, conditions, revocation","ad es. Spedizione, Condizioni generali di vendita, Diritto di recesso, ecc."
-"Create Checkout Agreements","Crea note su CGV per il checkout"
-"Conditions","CGV e diritto di recesso"
-"Display Checkbox on Frontend","Mostra checkbox nel frontend"
-"Require Confirmation on Customer Registration and/or Checkout","Campo obbligatorio per nuova registrazione e checkout"
-"Language Package for CMS Pages/Blocks/Agreements","Pacchetto lingua per pagine e blocchi CMS / Condizioni di vendita"
-"Create Email Templates","Creazione template e-mail"
-"German Email Templates","Template e-mail in tedesco"
-"Configure Tax","Configurazione tasse"
-"All tax settings will be overwritten!","Attenzione: tutte le impostazioni delle tasse saranno sovrascritte!"
-"Update Product Tax Classes","Aggiornamento tasse prodotto"
-Old,Attuale
-New,"Dopo"
-"No tax","Senza tasse"
-"Newsletter Subscribers Status History","Cronologia iscrizioni alla newsletter"
+"If you want to add additional StoreViews (i.e. for multiple languages), please do so before submitting this form.","Se vuoi aggiungere ulteriori storeview (per ulteriori lingue), sei pregato di farlo prima di compilare questa form."
+"Skip installation","salta l'installazione"
+"MageSetup has been installed.","MageSetup è stato installato."
+"Click <a href=""%s"">here</a> to set up your pages, blocks, emails and tax settings.","clicca <a href=""%s"">qui</a> per configurare le pagine, i blocchi, le email e la tassazione."
+"Please choose the requested setups:","Seleziona le configurazioni necessarie:"
+"Run MageSetup","Avvia MageSetup"
+"Update System Config Settings",Aggiorna le configurazioni di sistema"
+"i.e. newsletter confirmation, account confirmation, ..","ovvero conferma newsletter, conferma registrazione, .."
+"Create CMS Pages and Blocks","Crea Pagine e Blocchi CMS"
+"i.e. shipping, conditions, revocation","ovvero spedizioni, condizioni, resi"
+"Create Checkout Agreements","Crea Condizioni di Vendita"
+"Conditions","Condizioni"
+"Display Checkbox on Frontend","Mostra il Checkout nel Frontend"
+"Require Confirmation on Customer Registration and/or Checkout","Richiedi conferma alla registrazione e/o al checkout di un cliente"
+"Language Package for CMS Pages/Blocks/Agreements","Pacchetto traduzioni per Pagine/Blocchi/Condizioni CMS"
+"Create Email Templates","Crea template delle email"
+"German Email Templates","Template delle email in tedesco"
+"Configure Tax","Configura tassazione"
+"Shipping from Germany","Spedizioni dalla Germania"
+"All tax settings will be overwritten!","Tutte le configurazioni di tassazione saranno sovrascritte!"
+"Update Product Tax Classes","Aggiorna le classi fiscali dei prodotti"
+"Update Customer Tax Classes","Aggiorna le classi fiscali dei clienti"
+"Old","Vecchio"
+"New","Nuovo"
+"No tax","No tasse"
+"Newsletter Subscribers Status History","Storico degli iscritti alla newsletter"
 
-"MageSetup: CMS Blocks and Pages have been created.","MageSetup: pagine e blocchi CMS creati correttamente."
-"MageSetup: Checkout Agreements have been created.","MageSetup: condizioni di vendita creati correttamente."
-"MageSetup: Email Templates have been created.","MageSetup: template e-mail creati correttamente."
-"MageSetup: Tax Settings have been created.","MageSetup: impostazioni tasse salvate correttamente."
-"MageSetup: Product Tax Classes have been updated.","MageSetup: classi tasse dei prodotti aggiornate correttamente."
-"MageSetup: System Config Settings have been updated.","MageSetup: configurazione di sistema aggiornata correttamente."
+"MageSetup: CMS Blocks and Pages have been created.","MageSetup: Pagine e blocchi CMS sono stati creati."
+"MageSetup: Checkout Agreements have been created.","MageSetup: Le condizioni di vendita sono state create."
+"MageSetup: Email Templates have been created.","MageSetup: I template email sono stati creati."
+"MageSetup: Tax Settings have been created.","MageSetup: Le configurazioni delle tassazioni sono state create."
+"MageSetup: Product Tax Classes have been updated.","MageSetup: Le classi fiscali dei prodotti sono state create."
+"MageSetup: System Config Settings have been updated.","MageSetup: Le configurazioni di sistema sono state aggiornate."
 
-"Imprint","Impressum"
-Account,"Conto corrente n°"
+"Imprint","Informazioni negozio"
+"Account","Conto corrente n°"
 "Account owner","Intestatario c/c"
-"Bank number",ABI/CA
-"Bank name",Banca
-CEO,Amministratore
+"Bank number","Bank number"
+"Bank name","Banca"
+"CEO","Amministratore"
 "Owner","Proprietario"
-"Responsible according to § 5 TMG","Inhaltlich verantwortlich gemäß § 5 TMG"
-"Responsible for content","Resp. contenuti"
-"Responsible for content address","Indiritto del resp. contenuti"
-"Responsible in the interests of the press law","Verantwortlich im Sinne des Presserechts (V.i.S.d.P.)"
+"Responsible according to § 5 TMG","Responsabile secondo § 5 TMG"
+"Responsible for content","Responsabile contenuti"
+"Responsible for content address","Indirizzo del resp. contenuti"
+"Responsible in the interests of the press law","Responsabile stampa"
 "E-Mail","E-Mail"
 "Fax","Fax"
-"Financial office","Ufficio tributario"
+"Financial office","Ufficio triburatio"
 "IBAN","IBAN"
 "Clearing","Clearing"
-"Register court","Registro delle imprese"
-"Register number","HRB-Nummer"
+"Register court","Tribunale competente"
+"Register number","Iscrizione al registro delle imprese n°"
 "SWIFT","SWIFT"
 "BIC/SWIFT","BIC/SWIFT"
-"Tax number","Tax number"
-"Telephone","Telefono"
-"Supplementary Information for Telephone","Informatione telefonico additiva"
-"Web","Web"
-VAT-ID,"Partita IVA"
+"Tax number","Numero di identificazione con le autorità fiscali"
+"Supplementary Information for Telephone","Supplementary Information for Telephone"
+"Web","Pagina web"
+"VAT-ID","Numero di partita IVA"
 "Company 1","Ditta 1"
 "Company 2","Ditta 2"
-Street,Via
-Zip,CAP
-City,Città
-Telephone,Telefono
-"Tax number","Partita IVA"
+"Street","Via"
+"Zip","CAP"
+"City","Città"
+"Telephone","Telefono"
+"Tax number","Tax number"
 "Register court","Tribunale competente"
-"Financial office","Ufficio triburatio"
+"Financial office","Ufficio finanziario"
 "Register number","Iscrizione al registro delle imprese n°"
-"Reference for business rules (physician, physician...)","Verweis auf berufliche Regelungen (z.B. für Ärzte, Apotheker)"
-"Authority (ECG)","Behörde gem. ECG (E-Commerce-Gesetz)"
-"Shareholdings","Beteiligungen"
-"Editorial Concept","Blattlinie"
-"relevant for Austrian shops","relevant für österreichische Shops"
+"Reference for business rules (physician, physician...)","Riferimento regolamentazione lavorativo"
 "Account owner","Intestatario c/c"
-Account,"Conto corrente n°"
-"Bank number",ABI/CAB
-"Bank name",Banca
+"Account","Conto corrente n°"
+"Bank number","ABI/CAB"
+"Bank name","Banca"
 
 "%s%%","%s%%"
 
-"Recommended Extensions","Moduli consigliati"
-"Popular Payment Methods","Metodi di pagamento popolari"
+"Recommended Extensions","Estensioni suggerite"
+"Popular Payment Methods in Germany","Metodi di pagamento popolari"
 "Ip anonymization","Mascheramento IP"
-"Ensures that the ip address of the customers doesnt get involved into the tracking","L'indirizzo IP del cliente viene mascherato ai servizi di tracking (Tutela dei dati personali)"
+"Ensures that the ip address of the customers doesnt get involved into the tracking","Assicura che l'IP del cliente non venga coinvolto nel tracciamento"
 
-"Dynamic Shipping Tax Class Calculation","Calcolo dinamico delle tasse per le spese di spedizione"
-"Set to ""yes"" if you want to calculate the shipping tax rate based on the highest product tax rate in cart.<br /><b>ATTENTION:</b> This setting overwrites the ""Tax Class for Shipping"" setting above!","Se abilitato, le tasse per la spedizione vengono calcolate in base al prodotto nel carrello con l'aliquota IVA più elevata.<br /><b>ATTENZIONE:</b> Questa impostazione sovrascriva il settaggio ""Classe tasse per le spedizioni""."
+"Dynamic Shipping Tax Class Calculation","Calcolo dinamico della classe fiscale delle spedizioni"
+"Set to ""yes"" if you want to calculate the shipping tax rate based on the highest product tax rate in cart.<br /><b>ATTENTION:</b> This setting overwrites the ""Tax Class for Shipping"" setting above!","Imposta su ""si"" se vuoi calcolare la tassazione delle spedizioni sulla base della tassazione più altra tra i prodotti presenti nel carrello.<br /><b>ATTENZIONE:</b> Questa impostazione sovrascrive la configurazione ""Classe fiscale per le spedizioni"" di cui sopra!"
 
-"Shipping from","Spedizione da"
+"Shipping from","Spedito da"
 "This setting is base for the tax rate setup!","Questo settaggio è utilizzato per la configurazione delle tasse!"
 
-"[Show]","[Mostra]"
-"Visible in Checkout","Visibile durante il checkout"
+"[Show]","[Visualizza]"
+"Visible in Checkout","Visibile nel Checkout"
 
-"Display Additional Information","Mostra informazioni aggiuntive"
-"Display content from text field below at the checkout confirm page directly above the checkout button","Mostra contenuto del campo sottostante nella pagina di conferma dell'ordine (sotto al pulsante ""Acquista"")"
+"Display Additional Information","Visualizza informazioni aggiuntive"
+"Display content from text field below at the checkout confirm page directly above the checkout button","Visualizza il contenuto dal campo di testo sotto nella pagina di conferma del checkout subito sopra al bottone di conferma"
 
-"Directory ""%s"" not found. Locale not installed?","Cartella ""%s"" mancante. Pacchetto lingua installato?"
-"Default Setting","Impostazioni standard"
-"Use Default Setting","Utilizza impostazioni standard"
-"Select Locale","Scegli pacchetto lingua"
-"Create Transational Email Templates to be managed in the Magento admin area","Crea template e-mail (modificabili nel backend di Magento)"
-"Language Package for Email Templates","Pacchetto lingua per i template e-mail"
-"If your desired locale is missing, please check if it installed.","Se il pacchetto lingua richiesto non è presente, non è ancora disponibile in MageSetup"
-"If your desired locale is missing, it is not supported yet by MageSetup.","Se il pacchetto lingua richiesto non è presente, non è ancora disponibile in MageSetup"
+"Directory ""%s"" not found. Locale not installed?","La directory ""%s"" non è stata trovata. Locale non installato?"
+"Default Setting","Impostazioni di default"
+"Use Default Setting","Usa le impostazioni di default"
+"Select Locale","Seleziona le impostazioni Locali"
+"Create Transational Email Templates to be managed in the Magento admin area","Crea i template delle email transazionali per essere gestiti nel backend di Magento"
+"Language Package for Email Templates","Pacchetto traduzioni per i template delle email"
+"If your desired locale is missing, please check if it installed.","Se manca la tua traduzione preferita, verifica se è installata."
+"If your desired locale is missing, it is not supported yet by MageSetup.","Se manca la tua traduzione preferita, non è ancora supportata da MageSetup."
 
-"Configuration Settings","Impostazioni generali"
+"Configuration Settings","Configurazioni"
 "CMS Settings","Impostazioni CMS"
-"Email Settings","Impostazioni e-mail"
-"Tax Settings","Impostazioni tasse"
+"Email Settings","Impostazioni Email"
+"Tax Settings","Impostazioni Tassazione"
 
-"Delivery Time","Tempo di consegna"
-"Shipping Costs","Spese di spedizione"
-"Hide estimated shipping costs in cart","Nascondi stima delle spese di spedizione nel carrello"
-"Replace with a link to the shipping costs cms page","Sostituisci con un link alla pagina CMS ""Spese di spedizione"""
-"Here you find information regarding the shipping costs.","Informazioni sulle spese di spedizione"
-"Hide box ""Last Ordered Items""","Nascondi box ""Articoli ordinati di recente"""
-"Tax Settings","Impostazioni tasse"
+"Delivery Time","Data di consegna"
+"Shipping Costs","Costi di spedizione"
+"Hide estimated shipping costs in cart","Nascondi i costi di spedizione presunti nel carrello"
+"Replace with a link to the shipping costs cms page","Sostituiscili con un link alla pagina CMS dei costi di spedizione"
+"Here you find information regarding the shipping costs.","Qui puoi trovare informazioni sui costi di spedizione."
+"Hide box ""Last Ordered Items""","Nascondi box ""Gli ultimi prodotti ordinati"""
+"Tax Settings","Impostazioni Tassazione"
 
-"Display on","Mostra"
-"On checkout (Magento Default)","durante il checkout (Magento-Standard)"
-"On customer registration (or on checkout, if customer not registered before)","Nella registrazione (o nel checkout, se il cliente non è registrato)"
-"On customer registration and on checkout","Nella registrazione e nel checkout"
-Nowhere,Mai
-"Agreements not confirmed.","Condizioni di vendita non accettate"
+"Display on","Visualizza su"
+"On checkout (Magento Default)","Sul checkout (predefinito di Magento)"
+"On customer registration (or on checkout, if customer not registered before)","Sulla registrazione utente (o nel checkout, se il cliente non si è registrato in precedenza)"
+"On customer registration and on checkout","Sulla registrazione utente e sul checkout"
+"Nowhere","Da nessuna parte"
+"Agreements not confirmed.","Condizioni di vendita non confermate."
 
-"Base Price","Prezzo Base"
-"Newsletter Unsubscription for Guests, Double Opt In for registered Customers","Cancellazione newsletter per clienti non registrati e double opt-in per clienti registrati"
-"Debit Payment","Bonifico bancario"
+"German Language Pack","Pacchetto traduzioni tedesco"
+"Base Price","Prezzo base"
+"Newsletter Unsubscription for Guests, Double Opt In for registered Customers","Disiscrizione dalla newsletter per ospiti, Double Opt In per clienti registrati"
+"Debit Payment","Carta di Debito"
 "Cash on Delivery","Contrassegno"
-"Bank Payment","Pagamento anticipato"
-"Invoice Payment","Pagamento su Fattura"
-"Extension Key","Codice modulo"
+"Bank Payment","Bonifico Bancario"
+"Invoice Payment","Invoice Payment"
+"Extension Key","Chiave Estensione"
 "MagentoConnect","MagentoConnect"
-"Bank Information","Bank Information"
+"Bank Information","Informazioni della Banca"
