[~BUGFIX] Added missing quotation mark, thanks to @mam08ixo!

--- a/src/app/locale/it_IT/FireGento_MageSetup.csv
+++ b/src/app/locale/it_IT/FireGento_MageSetup.csv
@@ -22,7 +22,7 @@
 "Click <a href=""%s"">here</a> to set up your pages, blocks, emails and tax settings.","clicca <a href=""%s"">qui</a> per configurare le pagine, i blocchi, le email e la tassazione."
 "Please choose the requested setups:","Seleziona le configurazioni necessarie:"
 "Run MageSetup","Avvia MageSetup"
-"Update System Config Settings",Aggiorna le configurazioni di sistema"
+"Update System Config Settings","Aggiorna le configurazioni di sistema"
 "i.e. newsletter confirmation, account confirmation, ..","ovvero conferma newsletter, conferma registrazione, .."
 "Create CMS Pages and Blocks","Crea Pagine e Blocchi CMS"
 "i.e. shipping, conditions, revocation","ovvero spedizioni, condizioni, resi"
