Changed MwSt->USt in DE
Changed MwSt->USt in DE

--- a/src/app/locale/de_DE/FireGento_MageSetup.csv
+++ b/src/app/locale/de_DE/FireGento_MageSetup.csv
@@ -6,9 +6,9 @@
 "Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost""","Zeige ""inkl. Versandkosten"" statt ""zzgl. Versandkosten"""
 "No Page","Keine Seite"
 "No Block","Kein Block"
-"Incl. Tax","Inkl. MwSt."
-"Incl. %s Tax","Inkl. %s MwSt."
-"Excl. %s Tax","Zzgl. %s MwSt."
+"Incl. Tax","Inkl. USt."
+"Incl. %s Tax","Inkl. %s USt."
+"Excl. %s Tax","Zzgl. %s USt."
 "excl. <a href=""%s"">Shipping Cost</a>","zzgl. <a href=""%s"">Versandkosten</a>"
 "incl. <a href=""%s"">Shipping Cost</a>","inkl. <a href=""%s"">Versandkosten</a>"
 "Display Product Weight below Price","Produktgewicht unterhalb der Preise darstellen"
