Fixed English & French Withdrawal translations
English: Withdrawal, not Revocation (also for the forms)
French: Rétractation, c’est ne pas révocation (aussi pour les
formulaires)

--- a/src/app/locale/fr_FR/FireGento_MageSetup.csv
+++ b/src/app/locale/fr_FR/FireGento_MageSetup.csv
@@ -24,7 +24,7 @@
 "Update System Config Settings","Mettre à jour les réglages de la configuration système"
 "i.e. newsletter confirmation, account confirmation, ..", "expl. confirmation de newsletter, confirmation de création de compte, ..."
 "Create CMS Pages and Blocks","Créer les pages CMS et blocs"
-"i.e. shipping, conditions, revocation","expl. livraisons, conditions, révocation"
+"i.e. shipping, conditions, revocation","expl. livraisons, conditions, rétractation"
 "Create Checkout Agreements","Créer des conditions de vente"
 "Conditions","Conditions"
 "Display Checkbox on Frontend","Afficher les checkbox en Frontend"
