--- a/src/app/locale/fr_FR/FireGento_MageSetup.csv
+++ b/src/app/locale/fr_FR/FireGento_MageSetup.csv
@@ -12,7 +12,7 @@
 "incl. <a href=""%s"">Shipping Cost</a>","<a href=""%s"">Coût de livraison</a> compris"
 "Display Product Weight below Price","Afficher le poids du produit sous le prix"
 "Unit for Product Weight","Unité de mesure pour le poids des produits"
-"e.g. g, kg, lb, ...","p. ex. g, kg, lb, ..."
+"e.g. g, kg, lb, ...","expl. g, kg, lb, ..."
 "Shipping Weight %s","Poids de la livraison %s"
 
 "If you want to add additional StoreViews (i.e. for multiple languages), please do so before submitting this form.","Si vous souhaitez ajouter plus de vues de magasin (p. ex. langue multiple), vous devez le faire avant l'envoi de ce formulaire."
@@ -22,9 +22,9 @@
 "Please choose the requested setups:","Choisissez les réglages souhaités:"
 "Run MageSetup","Lancer MageSetup"
 "Update System Config Settings","Mettre à jour les réglages de la configuration système"
-"i.e. newsletter confirmation, account confirmation, ..", "p. ex. confirmation de newsletter, confirmation de création de compte, ..."
+"i.e. newsletter confirmation, account confirmation, ..", "expl. confirmation de newsletter, confirmation de création de compte, ..."
 "Create CMS Pages and Blocks","Créer les pages CMS et blocs"
-"i.e. shipping, conditions, revocation","p. ex. livraisons, conditions, révocation"
+"i.e. shipping, conditions, revocation","expl. livraisons, conditions, révocation"
 "Create Checkout Agreements","Créer des conditions de vente"
 "Conditions","Conditions"
 "Display Checkbox on Frontend","Afficher les checkbox en Frontend"
@@ -79,7 +79,7 @@
 "Street","Rue"
 "Zip","Code postal"
 "City","Ville"
-"Reference for business rules (physician, physician...)","Référence aux régimes professionnels (p. ex. pour les médecins, pharmaciens)"
+"Reference for business rules (physician, physician...)","Référence aux régimes professionnels (expl. pour les médecins, pharmaciens)"
 "Authority (ECG)","Autorité acc. ECG (loi E-Commerce)"
 "Shareholdings","Investissements"
 "Editorial Concept","Concept éditorial"
