--- a/src/app/locale/en_US/FireGento_MageSetup.csv
+++ b/src/app/locale/en_US/FireGento_MageSetup.csv
@@ -153,3 +153,9 @@
 "Extension Key","Extension Key"
 "MagentoConnect","MagentoConnect"
 "Bank Information","Bank Information"
+
+"I agree that my contact details are saved permanently for allocation and any further queries.","I agree that my contact details are saved permanently for allocation and any further queries."
+"Notice","Notice"
+"You can revoke this agreement at any time and for the future by sending an e-mail to %s.","You can revoke this agreement at any time and for the future by sending an e-mail to %s."
+"Please accept the agreement or call us by phone.","Please accept the agreement or call us."
+"This setting is required by German law due a ruling by OLG Köln from 11.03.2016","This setting is required by German law due a ruling by OLG Köln from 11.03.2016"
