[+FEATURE] Add accept-agreement value to mail template, php validation
Accepting the agreement has to be logged by law, so it should be in the email.
Adjust author and get back copyright due to coding guideline: https://github.com/firegento/coding-guidelines/blob/master/guidelines/02_CODE_DOCUMENTATION.md#file-comments-for-php-files

--- a/src/app/locale/en_US/FireGento_MageSetup.csv
+++ b/src/app/locale/en_US/FireGento_MageSetup.csv
@@ -159,3 +159,4 @@
 "You can revoke this agreement at any time and for the future by sending an e-mail to %s.","You can revoke this agreement at any time and for the future by sending an e-mail to %s."
 "Please accept the agreement or call us by phone.","Please accept the agreement or call us."
 "This setting is required by German law due a ruling by OLG Köln from 11.03.2016","This setting is required by German law due a ruling by OLG Köln from 11.03.2016"
+"Agreement accepted","Agreement accepted"
