Delivery time visibility on product detail page is now configurable.

--- a/src/app/locale/de_DE/FireGento_MageSetup.csv
+++ b/src/app/locale/de_DE/FireGento_MageSetup.csv
@@ -1,6 +1,7 @@
 "Display Block below Price","Block unterhalb der Preise darstellen"
 "Display tax info and shipping cost link below the price on all pages","Steuerinformationen und Link zur Versandkostenseite auf allen Seiten unterhalb der Preise darstellen"
 "Display Delivery time on Category Pages","Lieferzeit auf Produktübersichtsseiten anzeigen"
+"Display Delivery time on Product Detail","Lieferzeit auf Produktbeschreibung anzeigen"
 "CMS Page for Shipping Info","CMS-Seite für Versandkosten"
 "Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost""","Zeige ""inkl. Versandkosten"" statt ""zzgl. Versandkosten"""
 "Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost""","Zeige ""inkl. Versandkosten"" statt ""zzgl. Versandkosten"""
