--- a/src/app/locale/en_US/FireGento_MageSetup.csv
+++ b/src/app/locale/en_US/FireGento_MageSetup.csv
@@ -1,6 +1,7 @@
 "Display Block below Price","Display Block below Price"
 "Display tax info and shipping cost link below the price on all pages","Display tax info and shipping cost link below the price on all pages"
 "Display Delivery time on Category Pages","Display Delivery time on Category Pages"
+"Display Delivery time on Product Detail","Display Delivery time on Product Detail"
 "CMS Page for Shipping Info","CMS Page for Shipping Info"
 "Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost""","Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost"""
 "Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost""","Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost"""
