--- a/src/app/locale/de_DE/FireGento_MageSetup.csv
+++ b/src/app/locale/de_DE/FireGento_MageSetup.csv
@@ -4,12 +4,11 @@
 "Display Delivery time on Product Detail","Lieferzeit auf Produktbeschreibung anzeigen"
 "CMS Page for Shipping Info","CMS-Seite für Versandkosten"
 "Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost""","Zeige ""inkl. Versandkosten"" statt ""zzgl. Versandkosten"""
-"Show ""incl. Shipping Cost"" instead of ""excl. Shipping Cost""","Zeige ""inkl. Versandkosten"" statt ""zzgl. Versandkosten"""
 "No Page","Keine Seite"
 "No Block","Kein Block"
-"Incl. Tax","Inkl. USt."
-"Incl. %s Tax","Inkl. %s USt."
-"Excl. %s Tax","Zzgl. %s USt."
+"Incl. Tax","Inkl. MwSt."
+"Incl. %s Tax","Inkl. %s MwSt."
+"Excl. %s Tax","Zzgl. %s MwSt."
 "excl. <a href=""%s"">Shipping Cost</a>","zzgl. <a href=""%s"">Versandkosten</a>"
 "incl. <a href=""%s"">Shipping Cost</a>","inkl. <a href=""%s"">Versandkosten</a>"
 "Display Product Weight below Price","Produktgewicht unterhalb der Preise darstellen"
