fixed translation config, fixes #301

--- a/src/app/locale/en_US/FireGento_MageSetup.csv
+++ b/src/app/locale/en_US/FireGento_MageSetup.csv
@@ -28,7 +28,7 @@
 "Create CMS Pages and Blocks","Create CMS Pages and Blocks"
 "i.e. shipping, conditions, revocation","i.e. shipping, conditions, revocation"
 "Create Checkout Agreements","Create Checkout Agreements"
-"Conditions","Conditions"
+"i.e. terms and conditions, cancellation policy","Conditions"
 "Display Checkbox on Frontend","Display Checkbox on Frontend"
 "Require Confirmation on Customer Registration and/or Checkout","Require Confirmation on Customer Registration and/or Checkout"
 "Language Package for CMS Pages/Blocks/Agreements","Language Package for CMS Pages/Blocks/Agreements"
