--- a/src/app/locale/es_ES/FireGento_MageSetup.csv
+++ b/src/app/locale/es_ES/FireGento_MageSetup.csv
@@ -27,7 +27,7 @@ Update System Config Settings,Actualizar los ajustes de configuración del Siste
 Create CMS Pages and Blocks,Crear Páginas y Bloques CMS
 "i.e. shipping, conditions, revocation","Ej: información de envío, condiciones generales y derecho de desestimiento"
 Create Checkout Agreements,Crear Condiciones de Venta
-Conditions,Condiciones
+i.e. terms and conditions, cancellation policy,Condiciones
 Display Checkbox on Frontend,Mostrar Checkbox en Frontend
 Require Confirmation on Customer Registration and/or Checkout,Requerir confirmación para el registro del cliente y / o Pedido
 Language Package for CMS Pages/Blocks/Agreements,El paquete de idioma para Páginas CMS / Bloques / Acuerdos
