--- a/src/app/locale/it_IT/FireGento_MageSetup.csv
+++ b/src/app/locale/it_IT/FireGento_MageSetup.csv
@@ -27,7 +27,7 @@
 "Create CMS Pages and Blocks","Crea Pagine e Blocchi CMS"
 "i.e. shipping, conditions, revocation","ovvero spedizioni, condizioni, resi"
 "Create Checkout Agreements","Crea Condizioni di Vendita"
-"Conditions","Condizioni"
+"i.e. terms and conditions, cancellation policy","Condizioni"
 "Display Checkbox on Frontend","Mostra il Checkout nel Frontend"
 "Require Confirmation on Customer Registration and/or Checkout","Richiedi conferma alla registrazione e/o al checkout di un cliente"
 "Language Package for CMS Pages/Blocks/Agreements","Pacchetto traduzioni per Pagine/Blocchi/Condizioni CMS"
