--- a/src/app/locale/nl_NL/FireGento_MageSetup.csv
+++ b/src/app/locale/nl_NL/FireGento_MageSetup.csv
@@ -26,7 +26,7 @@
 "Create CMS Pages and Blocks","Maak CMS pagina's en blokken"
 "i.e. shipping, conditions, revocation","d.w.z. verzending, voorwaarden, intrekking"
 "Create Checkout Agreements","Maak algemene voorwaarden"
-"Conditions","Voorwaarden"
+"i.e. terms and conditions, cancellation policy","Voorwaarden"
 "Display Checkbox on Frontend","Geef checkbox op frontend weer"
 "Require Confirmation on Customer Registration and/or Checkout","Vereis bevestiging voor klant aanmelding en / of afrekenen"
 "Language Package for CMS Pages/Blocks/Agreements","Taal pakket voor CMS pagina's / blokken / overeenkomsten"
