--- a/src/app/locale/pl_PL/FireGento_MageSetup.csv
+++ b/src/app/locale/pl_PL/FireGento_MageSetup.csv
@@ -26,7 +26,7 @@
 "Create CMS Pages and Blocks","Utwórz strony CMS i bloki"
 "i.e. shipping, conditions, revocation","np. wysyłka, warunki, odwołanie"
 "Create Checkout Agreements","Utwórz warunki zakupu"
-"Conditions","Warunki"
+"i.e. terms and conditions, cancellation policy","Warunki"
 "Display Checkbox on Frontend","Wyświetl pola wyboru (checkbox) w widoku sklepu"
 "Require Confirmation on Customer Registration and/or Checkout","Wymagaj potwierdzenia rejestracji użytkownika oraz koszyka"
 "Language Package for CMS Pages/Blocks/Agreements","Pakiet językowy dla stron CMS/bloków/warunków"
