--- a/src/app/locale/ro_RO/FireGento_MageSetup.csv
+++ b/src/app/locale/ro_RO/FireGento_MageSetup.csv
@@ -25,7 +25,7 @@
 "Create CMS Pages and Blocks","Creare Blocuri și Pagini CMS"
 "i.e. shipping, conditions, revocation","adică expediere, condiții, revocare"
 "Create Checkout Agreements","Creare Acorduri Finalizare Comandă"
-"Conditions","Condiții"
+"i.e. terms and conditions, cancellation policy","Condiții"
 "Display Checkbox on Frontend","Afișare Casetă pe Interfață Client"
 "Require Confirmation on Customer Registration and/or Checkout","Solicitare Confirmare pentru Înregistrare Client și/sau Finalizare Comandă"
 "Language Package for CMS Pages/Blocks/Agreements","Pachet Limbă pentru Pagini/Blocuri/Acorduri CMS"
