--- a/src/app/locale/ru_RU/FireGento_MageSetup.csv
+++ b/src/app/locale/ru_RU/FireGento_MageSetup.csv
@@ -26,7 +26,7 @@
 "Create CMS Pages and Blocks","Создать CMS страницы и блоки"
 "i.e. shipping, conditions, revocation","т.е. доставка, условия, отмена"
 "Create Checkout Agreements","Создать Правила продажи"
-"Conditions","Условия"
+"i.e. terms and conditions, cancellation policy","Условия"
 "Language Package for CMS Pages/Blocks/Agreements","Языковой пакет для CMS страниц/блоков/соглашений"
 "Create Email Templates","Создать шаблоны писем"
 "German Email Templates","Шабоны писем на немецком языке"
