--- a/src/app/locale/de_DE/FireGento_MageSetup.csv
+++ b/src/app/locale/de_DE/FireGento_MageSetup.csv
@@ -27,7 +27,7 @@
 "Create CMS Pages and Blocks","CMS-Seiten und Statische Blöcke erstellen"
 "i.e. shipping, conditions, revocation","z.B. Versand, AGB, Widerruf"
 "Create Checkout Agreements","Bestellbedingungen erstellen"
-"Conditions","AGB und Widerrufsbelehrung"
+"i.e. terms and conditions, cancellation policy","z.B. AGB, Widerrufsbelehrung"
 "Display Checkbox on Frontend","Checkbox im Frontend anzeigen"
 "Require Confirmation on Customer Registration and/or Checkout","Pflichtfeld bei Kundenregistrierung und/oder Checkout"
 "Language Package for CMS Pages/Blocks/Agreements","Sprachpaket für CMS-Seiten/-Blocks/Bestellbedingungen"
