make required fields of contact form GDPR compliant

--- a/src/app/locale/de_DE/FireGento_MageSetup.csv
+++ b/src/app/locale/de_DE/FireGento_MageSetup.csv
@@ -168,3 +168,5 @@
 "Please accept the agreement or call us.","Bitte erklären Sie Ihre Einwilligung oder kontaktieren Sie uns telefonisch."
 "This setting is required by German law due a ruling by OLG Köln from 11.03.2016","Diese Einstellung ist erforderlich nach deutschem Gesetz auf Grund eines Urteils vom OLG Köln vom 11.03.2016"
 "Agreement accepted","Einwilligung erteilt"
+"Required field for contact to user.","Pflichtfeld für Kontaktaufnahme mit Nutzer."
+"Because of GDPR only email OR telephone can be required. Please choose here.","Aufgrund der DSGVO können nur E-Mail ODER Telefon Pflichtfeld sein. Bitte hier wählen."
