--- a/src/app/locale/en_US/FireGento_MageSetup.csv
+++ b/src/app/locale/en_US/FireGento_MageSetup.csv
@@ -161,3 +161,5 @@
 "Please accept the agreement or call us by phone.","Please accept the agreement or call us."
 "This setting is required by German law due a ruling by OLG Köln from 11.03.2016","This setting is required by German law due a ruling by OLG Köln from 11.03.2016"
 "Agreement accepted","Agreement accepted"
+"Required field for contact to user.","Required field for contact to user."
+"Because of GDPR only email OR telephone can be required. Choose here.","Because of GDPR only email OR telephone can be required. Choose here."
